# AegisOps-DRI-Autonomous-SRE-Agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: database.py  main.py  params.yml
app/core/: approval_store.py  embedding.py  llm.py  logging.py  settings.py  slack_verifier.py
app/models/: __init__.py  agent_run.py  incident_memory.py  knowledge_base.py  message.py  policies.py  session.py
app/react/: graph.py  nodes.py  prompt.py  states.py
app/react/tools/: __init__.py
app/react/tools/action/: restart_deployment.py  rollback_release.py  scale_deployment.py  scale_service.py  toggle_feature_flag.py  update_configmap.py  update_deployment_image.py
app/react/tools/diagnostic/: get_error_traces.py  get_logs.py  get_metrics.py  get_pod_status.py  logs.py
app/react/tools/memory/: retrieve_policy.py  retrieve_runbook.py  save_incident_memory.py
app/react/tools/memory_tools.py/: retrieve_policy.py  retrieve_similar_incidents.py  save_incident_memory.py
app/react/tools/notification/: escalate_to_human.py  send_approval_request.py  send_slack_notification.py  write_audit_log.py
app/react/tools/verification/: check_service_health.py  compare_metrics_before_after.py  verify_rollout_status.py
app/routers/: slack.py
app/utils/: load_params.py
infra/: prometheus.yml
migrations/: env.py
migrations/versions/: 1baadaab5309_change_vector_dimensions_to_768.py  c010dc53d7c5_init.py  c73b0ad4bd17_remove_redundant_agent_models.py
scripts/: docker-entrypoint.sh  seed_data.py
tests/: test-app.yml
