[project]
name = "aegisops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langchain-core",
    "langchain-ollama",
    "pgvector",
    "pydantic-settings",
    "requests",
    "sqlalchemy",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-postgres>=3.0.4",
    "kubernetes>=35.0.0",
    "kubernetes-asyncio>=35.0.1",
    "asyncpg>=0.31.0",
    "redis>=7.3.0",
]
